# MacroRecorder

./: pyproject.toml  start.sh
macrorecorder/core/: recorder.py
macrorecorder/gui/: application.py
